--- a/Tema2/Ejercicios/Ejercicio39/styles.css
+++ b/Tema2/Ejercicios/Ejercicio39/styles.css
@@ -1,14 +1,23 @@
-header{
+header {
     display: flex;
+    justify-content: space-between; 
+    align-items: center; 
+    padding: 0 20px; 
 }
 
+
 h1{
-    
     justify-content: start;
+    list-style: none; 
+    margin: 0; 
+    padding: 0; 
+    gap: 15px; 
 }
 
 nav ul{
+    display: flex;
     align-items: end;
+    gap: 25px;
 }
 
 #flex-cards{
