--- a/Tema3/Ejercicio16/index.css
+++ b/Tema3/Ejercicio16/index.css
@@ -4,7 +4,6 @@ video{
     width: 640px;
 }
 
-/* Barra de controles */
 .controls {
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
@@ -15,7 +14,6 @@ video{
     gap: 10px;
 }
 
-/* Botones de control */
 button {
     background: none;
     border: none;
@@ -30,30 +28,32 @@ button:hover {
     background-color: rgba(255, 255, 255, 0.2);
 }
 
-/* Barra de progreso */
-.progress-bar {
+/* Barra de progreso de vídeo */
+.barra-progreso {
     flex-grow: 1;
     height: 20px;
     position: relative;
     cursor: pointer;
+    background-color: #ddd; 
 }
 
-.progress {
+.progreso {
     height: 100%;
-    background-color: #333;
+    width: 0%; 
+    transition: width 0.1s ease-in-out;
+    background-color:  #4CAF50;
     border-radius: 10px;
     overflow: hidden;
 }
 
-.progress-filled {
+.progreso-rellenado {
     height: 100%;
-    background-color: #4CAF50;
-    width: 0%;
-    transition: width 0.1s;
+    background-color: #333;
+    width: 100%; 
 }
 
 /* Volumen */
-.volume-control {
+.control-volumen {
     display: flex;
     align-items: center;
     gap: 5px;
@@ -63,6 +63,7 @@ button:hover {
     width: 100px;
 }
 
+/* Enlaces */
 .video-links {
     margin-top: 10px;
     display: flex;
